--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "spinnytea <spinnytea@gmail.com>",
   "private": true,
   "devDependencies": {
+    "bower": "^1.3.12",
     "chai": "^1.9.1",
     "gulp": "^3.8.6",
+    "gulp-browserify": "^0.5.0",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
     "jshint-stylish": "^0.4.0"
