--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular": "~1.3.2",
     "d3": "~3.4.13",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-route": "~1.3.2"
   }
 }
