--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "private": true,
   "devDependencies": {
     "bower": "^1.3.12",
+    "browserify": "^6.3.2",
     "chai": "^1.9.1",
     "gulp": "^3.8.6",
-    "gulp-browserify": "^0.5.0",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
-    "jshint-stylish": "^0.4.0"
+    "jshint-stylish": "^0.4.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.1.1"
   },
   "dependencies": {
+    "express": "^4.10.2",
     "lodash": "^2.4.1",
     "priorityqueuejs": "^0.2.0",
     "q": "^1.0.1"
