nodemon to restart the server when I make server changes

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "express": "^4.10.2",
+    "gulp-nodemon": "^1.0.4",
     "lodash": "^2.4.1",
     "priorityqueuejs": "^0.2.0",
     "q": "^1.0.1"
