--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "private": true,
   "devDependencies": {
     "bower": "^1.3.12",
+    "browser-sync": "^1.7.0",
     "browserify": "^6.3.2",
     "chai": "^1.9.1",
     "gulp": "^3.8.6",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
     "jshint-stylish": "^0.4.0",
+    "touch": "0.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
