--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^3.8.6",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
+    "gulp-util": "^3.0.1",
     "jshint-stylish": "^0.4.0",
     "touch": "0.0.3",
     "vinyl-buffer": "^1.0.0",
