--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "browserify": "^6.3.2",
     "chai": "^1.9.1",
     "gulp": "^3.8.6",
+    "gulp-browserify": "^0.5.0",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
     "gulp-util": "^3.0.1",
     "jshint-stylish": "^0.4.0",
-    "touch": "0.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.1.1"
+    "touch": "0.0.3"
   },
   "dependencies": {
     "express": "^4.10.2",
