--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.10.2",
     "lodash": "^2.4.1",
     "priorityqueuejs": "^0.2.0",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "socket.io": "^1.2.1",
+    "socket.io-client": "^1.2.1"
   }
 }
