--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular": "~1.3.2",
     "d3": "~3.4.13",
     "jquery": "~2.1.1",
-    "angular-route": "~1.3.2"
+    "angular-route": "~1.3.2",
+    "bootstrap": "~3.3.1"
   }
 }
