--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lemon",
+  "name": "lime",
   "version": "0.2.0",
   "description": "Learning Machine",
   "main": "index.js",
@@ -10,25 +10,16 @@
   "author": "spinnytea <spinnytea@gmail.com>",
   "private": true,
   "devDependencies": {
-    "bower": "^1.3.12",
-    "browser-sync": "^1.7.0",
-    "browserify": "^6.3.2",
     "chai": "^1.9.1",
     "gulp": "^3.8.6",
-    "gulp-browserify": "^0.5.0",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
     "gulp-util": "^3.0.1",
     "jshint-stylish": "^0.4.0",
-    "node-inspector": "^0.8.1",
-    "touch": "0.0.3"
+    "q": "^1.1.2"
   },
   "dependencies": {
-    "express": "^4.10.2",
     "lodash": "^2.4.1",
-    "priorityqueuejs": "^0.2.0",
-    "q": "^1.0.1",
-    "socket.io": "^1.2.1",
-    "socket.io-client": "^1.2.1"
+    "priorityqueuejs": "^0.2.0"
   }
 }
