--- a/.jshintrc
+++ b/.jshintrc
@@ -7,6 +7,7 @@
   "indent": 2,
   "latedef": false,
   "laxcomma": false,
+  "loopfunc": true,
   "newcap": true,
   "nonbsp": true,
   "nonew": true,
