--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "spinnytea <spinnytea@gmail.com>",
   "private": true,
   "devDependencies": {
+    "bluebird": "^2.9.24",
     "chai": "^1.9.1",
     "gulp": "^3.8.6",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^0.5.2",
-    "jshint-stylish": "^0.4.0",
-    "q": "^1.1.2"
+    "jshint-stylish": "^0.4.0"
   },
   "dependencies": {
     "lodash": "^2.4.1",
