--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^2.9.24",
     "chai": "^2.2.0",
     "gulp": "^3.8.6",
+    "gulp-istanbul": "^0.7.0",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^2.0.1",
     "jshint-stylish": "^1.0.1"
