--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-istanbul": "^0.7.0",
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^2.0.1",
+    "gulp-rm": "^1.0.0",
     "jshint-stylish": "^1.0.1"
   },
   "dependencies": {
