--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "gulp-jshint": "^1.8.3",
     "gulp-mocha": "^2.0.1",
     "gulp-rm": "^1.0.0",
-    "jshint-stylish": "^1.0.1"
+    "jshint-stylish": "^1.0.1",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "lodash": "^3.6.0",
+    "lodash": "^4.2.1",
     "mkdirp": "^0.5.1",
     "priorityqueuejs": "^1.0.0"
   }
