--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "spinnytea <spinnytea@gmail.com>",
   "private": true,
   "devDependencies": {
-    "bluebird": "^2.9.24",
+    "bluebird": "^3.2.2",
     "chai": "^2.2.0",
     "gulp": "^3.8.6",
-    "gulp-istanbul": "^0.7.0",
-    "gulp-jshint": "^1.8.3",
-    "gulp-mocha": "^2.0.1",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-jshint": "^2.0.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-rm": "^1.0.0",
-    "jshint-stylish": "^1.0.1",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0"
   },
